# test_api

./: Dockerfile  LICENSE copy  README copy.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
src/test_api/: main.py  settings.py  util.py
src/test_api/alembic/versions/: e03596ded57b_init_db.py
src/test_api/db/: postgres.py
src/test_api/parser/: html_parser.py  model.py
tests/: test_test_api.py
