[tool.poetry]
name = "test_api"
version = "0.1.0"
description = ""
authors = ["Рахманкулов Дмитрий Александрович <rahmadmit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
pydantic = "1.10.12"
fastapi-utils = "^0.2.1"
uvicorn = "^0.23.1"
asyncpg = "^0.28.0"
sqlmodel = "^0.0.8"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.7.0"
pylint = "^2.17.5"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_migrations = "test_api.migrate_script:migrate_alembic"
